ipc/ipdl/test/ipdl/error/dtorReserved.ipdl
protocol dtorReserved {

    // it's an error to use old-style dtor syntax

child:
    ~SomeMsg();

};
